syntax="proto3";
package crypt.v1;

option go_package = "github.com/zarix908/passwords_store/pkg/pb/crypt/v1";

service CryptService {
    rpc EncryptFile(EncryptFileRequest) returns (EncryptFileResponse) {}
}

message EncryptFileRequest {
    string age_recipients = 1;
    bytes file = 2;
}

message EncryptFileResponse {
    bytes file = 1;
}
